# ROT

./: .env  .gitignore  README.md  arise_results.sh  bax.sh  build_dfg_pass.sh  build_etiss.sh  build_spike.sh  gen_insts.sh  measure_exe_time.sh  patch_etiss.sh  static_analyze.sh  tovenv.sh
example/: example.c
llvm-pass-plugin/: CMakeLists.txt  Makefile
llvm-pass-plugin/src/: pass.cpp
src/: dfg.py  dynamic.py  eval.py  generator.py  static.py  time_eval.py
src/model/: immediate.py  instruction_model.py  (+2 more)
target_scripts/: build_cmsisdsp_for_etiss.sh  build_embench_2_0_for_etiss.sh  build_embench_for_etiss.sh  build_fft_etiss.sh  compile_cmsis_dsp.sh  compile_embench_2_0_for_cv32e40x.sh  compile_embench_2_0_iot.sh  compile_embench_for_cv32e40x.sh  compile_embench_iot.sh  compile_embench_iot_asm.sh  compile_linux.sh  compile_musl.sh  disassemble_cmsis_dsp.sh  disassemble_embench_2_0_bins.sh  disassemble_embench_2_0_etiss_bins.sh  disassemble_embench_bins.sh  disassemble_embench_etiss_bins.sh  disassemble_fft.sh  disassemble_linux_bins.sh  disassemble_musl_bins.sh  eval_power.sh  execute_arise_embench.sh  execute_arise_embench_2_0.sh  execute_arise_fft.sh  execute_cmsisdsp.sh  execute_embench.sh  execute_embench_2_0.sh  execute_embench_2_0_cv32e40x.sh  execute_embench_2_0_etiss.sh  execute_embench_cv32e40x.sh  execute_embench_etiss.sh  static_analyze_embench.sh  static_dfg_analyze_cmsis_dsp.sh  static_dfg_analyze_embench_2_0_iot.sh  static_dfg_analyze_embench_iot.sh  static_dfg_analyze_linux.sh  static_entropy.sh  static_entropy_embench_2.sh  static_generate_inst.sh
(+3 files in other folders)
